deployment2.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ghee-deployment
  labels:
    first: app

spec:   # Behaviour of Deployment
  replicas: 3

  selector:
    matchLabels:
      app: web

  template:
    metadata:
      labels:
        app: web

    spec:   # Behaviour of Pod
      containers:
        - name: ghee-container
          image: manubolukavya11/ghee

          ports:
            - containerPort: 3000
