deployment1.yaml
apiVersion: v1
kind: Service
metadata: 
  name: fitness-service
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5000
  type: ClusterIP
