gate way.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: bug-gateway
  namespace: default
spec:
  gatewayClassName: envoy-gateway

  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
